<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/second"
        android:checkableBehavior="single">
        <item
            android:title="@string/player_example"
            android:id="@+id/player">
        </item>
        <item
            android:title="@string/dots_example"
            android:id="@+id/dots"/>
        <item
            android:title="@string/sheets_example"
            android:id="@+id/sheets"/>
        <item
            android:id="@+id/photo"
            android:title="@string/photo_example"/>
    </group>
    <group
        android:id="@+id/settings">
        <item
            app:actionViewClass="android.widget.Switch"
            android:title="@string/enable_message"
            android:id="@+id/enable_message"/>
        <item
            android:title="@string/git_item"
            android:id="@+id/git"/>
    </group>
</menu>